--- a/src/pages/Watch_Live.css
+++ b/src/pages/Watch_Live.css
@@ -181,6 +181,9 @@
     background: url('../assets/Section.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    /* border:1px solid red; */
+    /* height:130vh; */
 }
 
 /* Upcoming Services Section */
@@ -208,6 +211,7 @@
     justify-content: space-evenly;
     gap: 2rem;
     flex-wrap: wrap;
+    /* border:1px solid red; */
 }
 
 .plfrm {
@@ -240,7 +244,7 @@
 /* How to Watch Section */
 .howToWatch {
     width: 100vw;
-    min-height: 70vh;
+    min-height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
